--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="" href="css/style.css">
+    <link rel="stylesheet" type="" href="css/slides.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
 
@@ -34,19 +34,19 @@
                         <a href="#">首页</a>
                     </li>
                     <li>
-                        <a href="#">景点套餐</a>
+                        <a href="#attractions">景点套餐</a>
                     </li>
                     <li>
-                        <a href="#">旅游资讯</a>
+                        <a href="#food">旅游资讯</a>
                     </li>
                     <li>
-                        <a href="#">关于我们</a>
+                        <a href="#introduce">关于我们</a>
                     </li>
                     <li>
-                        <a href="#">联系我们</a>
+                        <a href="#service">联系我们</a>
                     </li>
                     <li>
-                        <a href="#">旅游签证</a>
+                        <a href="#form">旅游签证</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
             <span>中国成为纽约市第二大境外旅游客源国</span>
         </div>
     </header>
-    <section class="attractions">
+    <section class="attractions" id="attractions">
         <h3>洛杉矶热门旅游景点</h3>
         <p>Los Angeles Tourist Attractions</p>
         <ul>
@@ -138,7 +138,7 @@
             </li>
         </ul>
     </section>
-    <section class="food">
+    <section class="food" id="food">
         <h3>人气美食</h3>
         <p>Popular Food</p>
         <ul>
@@ -179,7 +179,7 @@
     </div>
     <div class="clear"></div>
 
-    <section class="introduce">
+    <section class="introduce" id="introduce">
         <h3>旅行套餐推荐</h3>
         <p>Travel Packages To Recommend</p>
         <ul>
@@ -210,7 +210,7 @@
         </ul>
     </section>
 
-    <section class="service">
+    <section class="service" id="service">
         <div>
             <h2>服务流程</h2>
             <p>Service Process</p>
@@ -243,7 +243,7 @@
         </ol>
     </section>
 
-    <section class="form">
+    <section class="form" id="form">
         <h3>生活不止眼前的苟且，还有诗和远方</h3>
         <p>开启一段难忘的旅行</p>
         <div><a href="#">立即注册</a></div>
